* Updated Spanish translation.

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,9 @@ ikiwiki (1.43) UNRELEASED; urgency=low
   * Use conditionals in the template for plugins, so that plugin pages
     say if they're currently enabled or not, and in various other places
     in the wiki.
+  * Updated Spanish translation.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 11 Feb 2007 20:18:51 -0500
+ -- Joey Hess <joeyh@debian.org>  Mon, 12 Feb 2007 13:50:25 -0500
 
 ikiwiki (1.42) unstable; urgency=low
 
