--- a/po/es.po
+++ b/po/es.po
@@ -1,14 +1,14 @@
-# translation of ikiwiki.po to spanish
+# translation of es.po to spanish
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Víctor Moral <victor@taquiones.net>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: ikiwiki\n"
+"Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-02-11 22:01-0500\n"
-"PO-Revision-Date: 2007-01-03 09:37+0100\n"
+"PO-Revision-Date: 2007-02-12 10:31+0100\n"
 "Last-Translator: Víctor Moral <victor@taquiones.net>\n"
 "Language-Team: spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -18,7 +18,7 @@ msgstr ""
 
 #: ../IkiWiki/CGI.pm:152
 msgid "You need to log in first."
-msgstr "Antes es necesario identificarse"
+msgstr "Antes es necesario identificarse."
 
 #: ../IkiWiki/CGI.pm:262
 msgid "Preferences saved."
@@ -27,7 +27,7 @@ msgstr "Las preferencias se han guardado."
 #: ../IkiWiki/CGI.pm:327
 #, perl-format
 msgid "%s is not an editable page"
-msgstr ""
+msgstr "la página %s no es modificable"
 
 #: ../IkiWiki/CGI.pm:415 ../IkiWiki/Plugin/brokenlinks.pm:24
 #: ../IkiWiki/Plugin/inline.pm:164 ../IkiWiki/Plugin/opendiscussion.pm:17
@@ -52,12 +52,12 @@ msgstr "Ha sido expulsado."
 
 #: ../IkiWiki/CGI.pm:660
 msgid "login failed, perhaps you need to turn on cookies?"
-msgstr ""
+msgstr "registro fallido, ¿ tal vez es necesario activar las cookies en el navegador ?"
 
 #: ../IkiWiki/Plugin/aggregate.pm:61
 #, perl-format
 msgid "aggregate plugin missing %s parameter"
-msgstr "A el complemento aggregate le falta el parámetro %s"
+msgstr "Al complemento aggregate le falta el parámetro %s"
 
 #: ../IkiWiki/Plugin/aggregate.pm:89
 msgid "new feed"
@@ -74,7 +74,7 @@ msgstr "nuevo"
 #: ../IkiWiki/Plugin/aggregate.pm:206
 #, perl-format
 msgid "expiring %s (%s days old)"
-msgstr "%s caducada (%s días de antiguedad)"
+msgstr "%s caducada (%s días de antigüedad)"
 
 #: ../IkiWiki/Plugin/aggregate.pm:213
 #, perl-format
@@ -115,8 +115,7 @@ msgstr "el programa fortune ha fallado"
 
 #: ../IkiWiki/Plugin/googlecalendar.pm:22
 msgid "googlecalendar failed to find url in html"
-msgstr ""
-"El complemento googlecalendar no ha encontrado un URL en el código HTML"
+msgstr "El complemento googlecalendar no ha encontrado un URL en el código HTML"
 
 #: ../IkiWiki/Plugin/inline.pm:36
 msgid "Must specify url to wiki with --url when using --rss or --atom"
@@ -171,7 +170,7 @@ msgstr "Obtenga un identificador OpenID"
 
 #: ../IkiWiki/Plugin/orphans.pm:42
 msgid "All pages are linked to by other pages."
-msgstr "Todas las páginas están referenciadas por otras."
+msgstr "Todas las páginas están referenciadas entre sí."
 
 #: ../IkiWiki/Plugin/passwordauth.pm:104
 msgid "(use FirstnameLastName)"
@@ -183,7 +182,7 @@ msgstr "Cuenta de usuario creada con éxito. Ahora puede identificarse."
 
 #: ../IkiWiki/Plugin/passwordauth.pm:147
 msgid "Error creating account."
-msgstr "Error creando la cuenta de usuario"
+msgstr "Error creando la cuenta de usuario."
 
 #: ../IkiWiki/Plugin/passwordauth.pm:168
 msgid "Failed to send mail"
@@ -191,7 +190,7 @@ msgstr "No he podido enviar un correo electrónico"
 
 #: ../IkiWiki/Plugin/passwordauth.pm:170
 msgid "Your password has been emailed to you."
-msgstr "Su contraseña le ha sido enviada por correo electrónico"
+msgstr "Se le ha enviado su contraseña por correo electrónico."
 
 #: ../IkiWiki/Plugin/poll.pm:64
 msgid "vote"
@@ -224,7 +223,7 @@ msgstr "actualizando el índice de búsquedas de hyperstraier"
 
 #: ../IkiWiki/Plugin/shortcut.pm:24
 msgid "shortcut missing name or url parameter"
-msgstr "shortcut necesita el párametro name ó el parámetro url"
+msgstr "shortcut necesita el parámetro name ó el parámetro url"
 
 #. translators: This is used to display what shortcuts are defined.
 #. translators: First parameter is the name of the shortcut, the second
@@ -232,7 +231,7 @@ msgstr "shortcut necesita el párametro name ó el parámetro url"
 #: ../IkiWiki/Plugin/shortcut.pm:33
 #, perl-format
 msgid "shortcut %s points to %s"
-msgstr "El atajo %s lleva a %s"
+msgstr "El atajo %s apunta a %s"
 
 #: ../IkiWiki/Plugin/smiley.pm:22
 msgid "failed to parse any smileys, disabling plugin"
@@ -253,7 +252,7 @@ msgstr "se ha producido un error fatal mientras procesaba la plantilla: "
 
 #: ../IkiWiki/Rcs/Stub.pm:66
 msgid "getctime not implemented"
-msgstr "la funcionalidad getctime no está incluída"
+msgstr "la funcionalidad getctime no está incluida"
 
 #: ../IkiWiki/Rcs/svn.pm:205
 msgid ""
@@ -296,9 +295,7 @@ msgstr "convirtiendo la página %s, la cual depende de %s"
 #: ../IkiWiki/Render.pm:402
 #, perl-format
 msgid "rendering %s, to update its backlinks"
-msgstr ""
-"convirtiendo la página %s para poner al día su lista de páginas que la "
-"referencian"
+msgstr "convirtiendo la página %s para actualizar la lista de páginas que hacen referencia a ella."
 
 #: ../IkiWiki/Render.pm:414
 #, perl-format
@@ -323,7 +320,7 @@ msgstr "generando programas auxiliares.."
 
 #: ../IkiWiki/Setup/Standard.pm:68
 msgid "rebuilding wiki.."
-msgstr "reconstruyendo el wiki..."
+msgstr "reconstruyendo el wiki.."
 
 #: ../IkiWiki/Setup/Standard.pm:71
 msgid "refreshing wiki.."
@@ -349,8 +346,7 @@ msgstr "el programa %s no parece ser ejecutable"
 
 #: ../IkiWiki/Wrapper.pm:20
 msgid "cannot create a wrapper that uses a setup file"
-msgstr ""
-"no puedo crear un programa envoltorio que utiliza un archivo de configuración"
+msgstr "no puedo crear un programa envoltorio que utiliza un archivo de configuración"
 
 #: ../IkiWiki/Wrapper.pm:24
 msgid "wrapper filename not specified"
@@ -382,7 +378,7 @@ msgstr "uso: ikiwiki [opciones] origen destino"
 #: ../IkiWiki.pm:103
 msgid "Must specify url to wiki with --url when using --cgi"
 msgstr ""
-"Es obligatorio especicar un url al wiki con el parámetro --url si se utiliza "
+"Es obligatorio especificar un url al wiki con el parámetro --url si se utiliza "
 "el parámetro --cgi"
 
 #: ../IkiWiki.pm:148 ../IkiWiki.pm:149
@@ -399,3 +395,4 @@ msgid "%s preprocessing loop detected on %s at depth %i"
 msgstr ""
 "se ha detectado un bucle de preprocesado %s en la página %s en la vuelta "
 "número %i"
+
