web commit by JoshTriplett

--- a/doc/todo/optional_ability_to_edit_non-wiki_files_through_web_interface.mdwn
+++ b/doc/todo/optional_ability_to_edit_non-wiki_files_through_web_interface.mdwn
@@ -13,3 +13,6 @@ I'd prefer to handle this with a file upload feature, since the security
 issues it will need to deal with are the same, and the set of non-wiki
 files that can be edited in a text editor is a lot smaller than the set of
 files a user might want to upload. --[[Joey]]
+
+> Fair enough; file upload would solve this problem for me, and I need it
+> for other reasons as well. --[[JoshTriplett]]
