web commit by JoshTriplett: You rock mightily.

--- a/doc/todo/conditional_text_based_on_ikiwiki_features.mdwn
+++ b/doc/todo/conditional_text_based_on_ikiwiki_features.mdwn
@@ -104,3 +104,5 @@ for the condition itself.
 This is now completely [[todo/done]]! See [[plugins/conditional]].
 
 --[[Joey]]
+
+> You rock mightily. --[[JoshTriplett]]
