--- a/doc/todo/shortcut_optional_parameters.mdwn
+++ b/doc/todo/shortcut_optional_parameters.mdwn
@@ -29,3 +29,18 @@ look different:
     \[[template id=debfiles package=ikiwiki dist=testing]]
 
 --[[Joey]]
+
+> I think I would find templates sufficient, if:
+>
+> 1. I could use the name of the template as a preprocessor directive
+>    (`\[[templatename ...]]`), rather than using the `template` directive
+>    with an `id` argument (`\[[template id=templatename]]`).
+> 2. Template invocation allowed bare values in addition to `key=value`
+>    arguments, and template definition supported some means to access the
+>    value.  This would allow `\[[debfiles ikiwiki]]` rather than `\[[debfiles
+>    package=ikiwiki]]`.
+> 3. I could use ikiwiki syntax in the template, not just HTML and
+>    HTML::Template.  (If I can already do that, then [[/plugins/template]]
+>    should make that more clear.)
+>
+> --[[JoshTriplett]]
