web commit by JoshTriplett: Response: shortcuts with only desc still useful.

--- a/doc/todo/shortcut_with_no_url_parameter__44___only_desc.mdwn
+++ b/doc/todo/shortcut_with_no_url_parameter__44___only_desc.mdwn
@@ -10,3 +10,14 @@ to the BTS and PTS.
 --[[JoshTriplett]]
 
 It sounds like you're looking for templates, not shortcuts. --[[Joey]]
+
+> Perhaps true (see my issues with template syntax on
+> [[todo/shortcut_optional_parameters]]), but allowing a `shortcut` without an
+> `url` still seems reasonable, and simple.  You could also use such shortcuts
+> without markup at all, as an abbreviation mechanism:
+> 
+>     \[[shortcut name=spi desc="Software in the Public Interest, Inc."]]].
+>     \[[shortcut name=sosp desc="Symposium on Operating System Principles"]]].
+>     \[[shortcut name=cacm desc="Communications of the ACM"]]].
+>
+> --[[Josh Triplett]]
