web commit by JoshTriplett: Response: client-side issue, not ikiwiki issue.

--- a/doc/todo/refreshing_recentchanges_page.mdwn
+++ b/doc/todo/refreshing_recentchanges_page.mdwn
@@ -13,3 +13,8 @@ in WWW browser tab than subscribing to page. --Pawel
 >> refresh meta tag into `recentchanges.tmpl`. Do you like it? ;) --Pawel
 
 >>> Seems reasonable --[[Joey]]
+
+> Sounds like a client-side issue, not an ikiwiki issue.  Grab the
+> [ReloadEvery](https://addons.mozilla.org/firefox/115/) extension for
+> <strike>Firefox</strike>Iceweasel, and use that to periodically refresh any page you
+> want. --[[JoshTriplett]]
