web commit by JoshTriplett: (included in ikiwiki) xor (third-party plugin)?

--- a/doc/templates/discussion.mdwn
+++ b/doc/templates/discussion.mdwn
@@ -7,3 +7,8 @@ Thanks
 john
 
 > Either way would work ok. From a security standpoint, keeping the templates under version control isn't entirely safe, if you have anonymous untrusted svn committers. Web commits won't be able to touch them though, so that's ok. --[[Joey]]
+
+
+Couldn't the [[templates/plugin]] template replace the "included" parameter
+with the same check used for "third-party plugin"?  Don't "third-party plugin"
+and "included in ikiwiki" form precisely complementary sets?  --[[JoshTriplett]]
