simplified plugin definitions

--- a/doc/plugins/aggregate.mdwn
+++ b/doc/plugins/aggregate.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=aggregate included=1 author="[[Joey]]"]]
+[[template id=plugin name=aggregate author="[[Joey]]"]]
 [[tag type/useful]]
 
 This plugin allows content from other feeds to be aggregated into the wiki.
