--- a/doc/plugins/anonok.mdwn
+++ b/doc/plugins/anonok.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=anonok included=1 author="[[Joey]]"]]
+[[template id=plugin name=anonok author="[[Joey]]"]]
 [[tag type/auth]]
 
 By default, anonymous users cannot edit the wiki. This plugin allows
