--- a/doc/plugins/camelcase.mdwn
+++ b/doc/plugins/camelcase.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=camelcase included=1 author="[[Joey]]"]]
+[[template id=plugin name=camelcase author="[[Joey]]"]]
 
 This plugin makes words in CamelCase be treated as a [[WikiLink]]. That is
 to say, any two or more words capitalised and mashed together are assumed
