--- a/doc/plugins/conditional.mdwn
+++ b/doc/plugins/conditional.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=conditional core=1 included=1 author="[[Joey]]"]]
+[[template id=plugin name=conditional core=1 author="[[Joey]]"]]
 [[tag type/format]]
 
 With this plugin, you can make text be conditionally displayed on a page.
