--- a/doc/plugins/favicon.mdwn
+++ b/doc/plugins/favicon.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=favicon included=1 author="[[Joey]]"]]
+[[template id=plugin name=favicon author="[[Joey]]"]]
 [[tag type/chrome]]
 
 If this plugin is enabled, then an icon link is added to pages, for web
