--- a/doc/plugins/googlecalendar.mdwn
+++ b/doc/plugins/googlecalendar.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=linkmap included=1 author="[[Joey]]"]]
+[[template id=plugin name=googlecalendar author="[[Joey]]"]]
 [[tag type/special-purpose]]
 
 This plugin allows embedding a google calendar iframe in the wiki.
