--- a/doc/plugins/html.mdwn
+++ b/doc/plugins/html.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=html included=1 author="[[Joey]]"]]
+[[template id=plugin name=html author="[[Joey]]"]]
 [[tag type/html type/format]]
 
 This plugin lets html pages be used as source pages for the wiki. The
