--- a/doc/plugins/htmltidy.mdwn
+++ b/doc/plugins/htmltidy.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=htmltidy included=1 author="Faidon Liambotis"]]
+[[template id=plugin name=htmltidy author="Faidon Liambotis"]]
 [[tag type/html]]
 [[tag type/slow]]
 
