--- a/doc/plugins/httpauth.mdwn
+++ b/doc/plugins/httpauth.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=httpauth included=1 author="Alec Berryman"]]
+[[template id=plugin name=httpauth author="Alec Berryman"]]
 [[tag type/auth]]
 
 This plugin allows HTTP basic authentication to be used to log into the
