--- a/doc/plugins/linkmap.mdwn
+++ b/doc/plugins/linkmap.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=linkmap included=1 author="Joey Hess"]]
+[[template id=plugin name=linkmap author="Joey Hess"]]
 [[tag type/meta]]
 [[tag type/slow]]
 This plugin uses [graphviz](http://www.graphviz.org/) to generate a graph showing the links between a
