--- a/doc/plugins/map.mdwn
+++ b/doc/plugins/map.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=map included=1 author="Alessandro Dotti Contra"]]
+[[template id=plugin name=map author="Alessandro Dotti Contra"]]
 [[tag type/meta]]
 
 This plugin generates a hierarchical page map for the wiki. Example usage:
