--- a/doc/plugins/mirrorlist.mdwn
+++ b/doc/plugins/mirrorlist.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=mirror included=1 author="[[Joey]]"]]
+[[template id=plugin name=mirror author="[[Joey]]"]]
 [[tag type/special-purpose]]
 
 This plugin allows adding links a list of mirrors to each page in the
