--- a/doc/plugins/opendiscussion.mdwn
+++ b/doc/plugins/opendiscussion.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=opendiscussion included=1 author="[[Joey]]"]]
+[[template id=plugin name=opendiscussion author="[[Joey]]"]]
 [[tag type/auth]]
 
 This plugin allows editing of Discussion pages by anonymous users who have
