--- a/doc/plugins/openid.mdwn
+++ b/doc/plugins/openid.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=openid included=1 author="[[Joey]]"]]
+[[template id=plugin name=openid author="[[Joey]]"]]
 [[tag type/auth]]
 
 This plugin allows users to use their [OpenID](http://openid.net/) to log
