--- a/doc/plugins/orphans.mdwn
+++ b/doc/plugins/orphans.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=orphans included=1 author="[[Joey]]"]]
+[[template id=plugin name=orphans author="[[Joey]]"]]
 [[tag type/meta]]
 
 This plugin generates a list of possibly orphaned pages -- pages that no
