--- a/doc/plugins/pagecount.mdwn
+++ b/doc/plugins/pagecount.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=pagecount included=1 author="[[Joey]]"]]
+[[template id=plugin name=pagecount author="[[Joey]]"]]
 [[tag type/meta]]
 
 Provides a \\[[pagecount ]] [[PreProcessorDirective]] that is replaced with
