--- a/doc/plugins/rawhtml.mdwn
+++ b/doc/plugins/rawhtml.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=rawhtml included=1 author="[[Joey]]"]]
+[[template id=plugin name=rawhtml author="[[Joey]]"]]
 [[tag type/html type/format]]
 
 This plugin changes how ikiwiki handles html files, making it treat html
