--- a/doc/plugins/rst.mdwn
+++ b/doc/plugins/rst.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=rst included=1 author="Sergio Talens-Oliag"]]
+[[template id=plugin name=rst author="Sergio Talens-Oliag"]]
 [[tag type/format]]
 [[tag type/slow]]
 
