--- a/doc/plugins/search.mdwn
+++ b/doc/plugins/search.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=search included=1 author="[[Joey]]"]]
+[[template id=plugin name=search author="[[Joey]]"]]
 [[tag type/useful]]
 
 This plugin is included in ikiwiki, but is not enabled by default. It adds
