--- a/doc/plugins/shortcut.mdwn
+++ b/doc/plugins/shortcut.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=shortcut included=1 author="[[Joey]]"]]
+[[template id=plugin name=shortcut author="[[Joey]]"]]
 [[tag type/format]]
 
 This plugin allows external links to commonly linked to sites to be made
