--- a/doc/plugins/signinedit.mdwn
+++ b/doc/plugins/signinedit.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=signinedit core=1 included=1 author="[[Joey]]"]]
+[[template id=plugin name=signinedit core=1 author="[[Joey]]"]]
 [[tag type/auth]]
 
 This plugin, which is enabled by default, requires users be logged in
