--- a/doc/plugins/toc.mdwn
+++ b/doc/plugins/toc.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=toc included=1 author="Joey Hess"]]
+[[template id=plugin name=toc author="Joey Hess"]]
 [[tag type/chrome]]
 
 Add a table of contents be to a page:
