--- a/doc/plugins/toggle.mdwn
+++ b/doc/plugins/toggle.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=toggle included=1 author="[[Joey]]"]]
+[[template id=plugin name=toggle author="[[Joey]]"]]
 [[tag type/chrome]]
 
 With this plugin you can create links on pages that, when clicked, toggle
