--- a/doc/plugins/typography.mdwn
+++ b/doc/plugins/typography.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=typography included=1 author="[[Roktas]]"]]
+[[template id=plugin name=typography author="[[Roktas]]"]]
 [[tag type/format]]
 
 This plugin, also known as
