--- a/doc/plugins/wikitext.mdwn
+++ b/doc/plugins/wikitext.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=wikitext included=1 author="[[Joey]]"]]
+[[template id=plugin name=wikitext author="[[Joey]]"]]
 [[tag type/format]]
 
 This plugin allows ikiwiki to process pages written in the original wiki
