--- a/doc/templates/discussion.mdwn
+++ b/doc/templates/discussion.mdwn
@@ -12,3 +12,5 @@ john
 Couldn't the [[templates/plugin]] template replace the "included" parameter
 with the same check used for "third-party plugin"?  Don't "third-party plugin"
 and "included in ikiwiki" form precisely complementary sets?  --[[JoshTriplett]]
+
+> Yes, can be done..
