--- a/doc/plugins/ddate.mdwn
+++ b/doc/plugins/ddate.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=ddate included=1 author="[[Joey]]"]]
+[[template id=plugin name=ddate author="[[Joey]]"]]
 [[tag type/fun]]
 
 Enables use of Discordian dates. `--timeformat` can be used to change
