--- a/doc/plugins/htmlscrubber.mdwn
+++ b/doc/plugins/htmlscrubber.mdwn
@@ -1,5 +1,4 @@
-[[template id=plugin name=htmlscrubber core=1 included=1
-author="[[Joey]]"]]
+[[template id=plugin name=htmlscrubber core=1 author="[[Joey]]"]]
 [[tag type/html type/core]]
 
 This plugin is enabled by default. It sanitizes the html on pages it renders
