--- a/doc/plugins/mdwn.mdwn
+++ b/doc/plugins/mdwn.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=mdwn core=1 included=1 author="[[Joey]]"]]
+[[template id=plugin name=mdwn core=1 author="[[Joey]]"]]
 [[tag type/format type/core]]
 
 This plugin lets ikwiki convert files with names ending in ".mdwn" to html.
