--- a/doc/plugins/pagestats.mdwn
+++ b/doc/plugins/pagestats.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=pagestate included=1 author="Enrico Zini"]]
+[[template id=plugin name=pagestate author="Enrico Zini"]]
 [[tag type/meta type/tags]]
 
 This plugin can generate stats about how pages link to each other. It can
