--- a/doc/plugins/passwordauth.mdwn
+++ b/doc/plugins/passwordauth.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=passwordauth core=1 included=1 author="[[Joey]]"]]
+[[template id=plugin name=passwordauth core=1 author="[[Joey]]"]]
 [[tag type/auth]]
 [[tag type/core]]
 
