--- a/doc/plugins/poll.mdwn
+++ b/doc/plugins/poll.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=poll included=1 author="[[Joey]]"]]
+[[template id=plugin name=poll author="[[Joey]]"]]
 [[tag type/useful]]
 
 This plugin allows you to create online polls in the wiki. Here's an
