--- a/doc/templates/release.mdwn
+++ b/doc/templates/release.mdwn
@@ -3,5 +3,5 @@
 <TMPL_VAR news>
 
 </TMPL_IF>
-ikiwiki <TMPL_VAR version> released with [[toggle text="these changes"]]
-[[toggleable text="""<TMPL_VAR changelog>"""]]
+ikiwiki <TMPL_VAR version> released with [[toggle text="these changes" id="changelog"]]
+[[toggleable id="changelog" text="""<TMPL_VAR changelog>"""]]
