--- a/doc/news/version_1.42.mdwn
+++ b/doc/news/version_1.42.mdwn
@@ -1,15 +1,12 @@
-News for ikiwiki 1.42:
+[[template id=release version="1.42" news="""
+The anonok setting in config files has been removed. To enable
+httpauth support on your wiki, you should now enable the anonok plugin,
+instead.
 
-   The anonok setting in config files has been removed. To enable
-   httpauth support on your wiki, you should now enable the anonok plugin,
-   instead.
-
-   Third-party plugins that use pagespec\_match() should be updated to pass
-   the new third parameter (from) to that function. This is needed for the
-   new relative glob matching to work.
-
-ikiwiki 1.42 released with [[toggle text="these changes"]]
-[[toggleable text="""
+Third-party plugins that use pagespec\_match() should be updated to pass
+the new third parameter (from) to that function. This is needed for the
+new relative glob matching to work.
+""" changelog="""
    * Fix several more missing translations of Discussion.
    * Fix for missing backlinks() in pagestats plugin.
    * Add canedit hook, allowing arbitrary controls over when a page can be
@@ -40,4 +37,5 @@ ikiwiki 1.42 released with [[toggle text="these changes"]]
      to exist in the wiki, and the web user would need to somehow use the web
      based editor to replace it with malicious content.
      (Sorry Josh, this means you can't edit style.css directly anymore,
-     although I do appreciate your fixes, actually..)"""]]
+     although I do appreciate your fixes, actually..)
+"""]]
