--- a/doc/news/version_1.42.mdwn
+++ b/doc/news/version_1.42.mdwn
@@ -1,39 +1,41 @@
 [[template id=release version="1.42" news="""
-The anonok setting in config files has been removed. To enable
-httpauth support on your wiki, you should now enable the anonok plugin,
+The `anonok` setting in config files has been removed. To enable anonymous
+edits on your wiki, you should now enable the [[anonok_plugin|plugins/anonok]]
 instead.
 
-Third-party plugins that use pagespec\_match() should be updated to pass
-the new third parameter (from) to that function. This is needed for the
-new relative glob matching to work.
+[[Third-party_plugins|plugins/contrib]] that use `pagespec_match()` should be
+updated to pass the new third parameter `from` to that function. This is
+needed for the new relative glob matching to work.
 """ changelog="""
    * Fix several more missing translations of Discussion.
-   * Fix for missing backlinks() in pagestats plugin.
-   * Add canedit hook, allowing arbitrary controls over when a page can be
+   * Fix for missing `backlinks()` in [[pagestats_plugin|plugins/pagestats]].
+   * Add `canedit` hook, allowing arbitrary controls over when a page can be
      edited.
-   * Move code forcing signing before edit to a new "signinedit" plugin, and
-     code checking for locked pages into a new "lockedit" plugin. Both are
+   * Move code forcing signing before edit to a new
+     [[signinedit_plugin|plugins/signinedit]], and move code checking for
+     locked pages into a new [[lockedit_plugin|plugins/lockedit]]. Both are
      enabled by default.
-   * Remove the anonok config setting. This is now implemented by a new
-     "anonok" plugin. Anyone with a wiki allowing anonymous edits should
-     change their configs to enable this new plugin.
-   * Add an opendiscussion plugin that allows anonymous users to edit
-     discussion pages, on a wiki that otherwise wouldn't allow it.
+   * Remove the `anonok` config setting. This is now implemented by a new
+     [[anonok_plugin|plugins/anonok]]. Anyone with a wiki allowing anonymous
+     edits should change their configs to enable this new plugin.
+   * Add an [[opendiscussion_plugin|plugins/opendiscussion]] that allows
+     anonymous users to edit discussion pages, on a wiki that otherwise
+     wouldn't allow anonymous edits.
    * Lots of CGI code reorg and cleanup.
-   * Avoid using lots of memory when copying large non-html files.
+   * Avoid using lots of memory when copying large non-HTML files.
      Yes, you can keep videos in the wiki..
-   * Add feedshow option to allow reducing the number of items included in
-     an rss or atom feed.
+   * Add `feedshow` option to allow reducing the number of items included in
+     an RSS or Atom feed.
    * Change based on a patch from Ethan to support relative matching in
-     PageSpecs, by using "./".
-   * pagespec\_match() has grown a new third parameter to support this.
-   * Add "reverse" option to inline to invert sort orders.
+     [[PageSpec]]s, by using "`./`".
+   * `pagespec_match()` has grown a new third parameter to support this.
+   * Add `reverse` option to inline to invert sort orders.
    * Drop the BSD license for the templates and basewiki, and just allow them
      to be used as close to public domain as possible.
-   * viewcvs is now viewvc (in Debian unstable), update everything to use the
+   * ViewCVS is now ViewVC (in Debian unstable); update everything to use the
      new name.
    * Fix a security hole that allowed a web user to edit images and other
-     non-page format files in the wiki. To exploit this, the file already had
+     non-page-format files in the wiki. To exploit this, the file already had
      to exist in the wiki, and the web user would need to somehow use the web
      based editor to replace it with malicious content.
      (Sorry Josh, this means you can't edit style.css directly anymore,
