--- a/doc/news/version_1.40.mdwn
+++ b/doc/news/version_1.40.mdwn
@@ -1,5 +1,5 @@
 [[template id=release version="1.40" changelog="""
-   * Fix missing categories in rss/atom feeds.
+   * Fix missing categories in RSS/Atom feeds.
    * Add French translation by Jean-Luc Coulon. Closes: #[406881](http://bugs.debian.org/406881)
    * Fix bogus use of CDATA in atom feeds. Closes: #[406898](http://bugs.debian.org/406898)
 """]]
