web commit by JoshTriplett: Fix typo.

--- a/doc/patchqueue/more_class__61____34____34___for_css.mdwn
+++ b/doc/patchqueue/more_class__61____34____34___for_css.mdwn
@@ -15,8 +15,8 @@ Here's the one-liner:
 
 > applied --[[Joey]]
 
-The following adds a div element with class="trailer" around the meta-informati
-on added after an inlined page (namely: the post date, the tags, and the actions):
+The following adds a div element with class="trailer" around the meta-information
+added after an inlined page (namely: the post date, the tags, and the actions):
 
     --- inlinepage.tmpl.orig        2006-12-28 16:56:49.000000000 +0100
     +++ inlinepage.tmpl     2006-12-28 17:02:06.000000000 +0100
