web commit by JoshTriplett: Wrong report category.  Also, example of problem on [[plugins/conditional]].

--- a/doc/todo/smileys_do_not_work_in_PreprocessorDirective_arguments.mdwn
+++ b/doc/todo/smileys_do_not_work_in_PreprocessorDirective_arguments.mdwn
@@ -8,3 +8,9 @@ smileys for a different meaning, smiley substitution should not happen until
 after [[PreprocessorDirective]]s.
 
 --[[JoshTriplett]]
+
+> Sorry, I should have filed this under [[bugs]], not [[todo]].
+>
+> Also, for an example of this issue, consider the sample conditional on [[plugins/conditional]].
+>
+> --[[JoshTriplett]]
