--- a/doc/patchqueue/varioki_--_add_template_variables___40__with_closures_for_values__41___in_ikiwiki.setup.mdwn
+++ b/doc/patchqueue/varioki_--_add_template_variables___40__with_closures_for_values__41___in_ikiwiki.setup.mdwn
@@ -12,3 +12,9 @@ This plugin hooks itsef into the "pagetemplate" hook, and adds parameters to the
 For every key in the configured hash, the corresponding value is evaluated.  Based on whether the value was a stringified scalar, code, array, or hash, the value of the template parameter is generated on the fly.  The available variables are whatever is available to "pagetemplate" hook scripts, namely, $page, $destpage, and $template.  Additionally, the global variables and functions as defined in the Ikiwiki documentation (<http://ikiwiki.kitenet.net/plugins/write.html>) may be used.
 
 ManojSrivastava
+
+> I think you could now implement "toplvl" using [[conditionals|/plugins/conditional]]:
+>
+>     \[[if test="destpage(/index)" then="""...""" else="""..."""]]
+>
+> --[[JoshTriplett]]
