web commit by JoshTriplett

--- a/doc/todo/default_content_for_new_post.mdwn
+++ b/doc/todo/default_content_for_new_post.mdwn
@@ -12,4 +12,4 @@ This feature would also allow the automatic inclusion of a given template in
 every new post, which could help for [[/plugins]] (automatically use the
 plugin template), or for [[/bugs]] and [[todo_items|/todo]] (automatically use
 a template that appends "(done)" to the title if the page links to
-[[bugs/done]] or [[todo/done]], respectively. --[[JoshTriplett]]
+"done"). --[[JoshTriplett]]
