web commit by JoshTriplett: Turn a bare URL into a link.

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -117,7 +117,7 @@ actions.  However, it may not be something everyone appreciates.  Any thoughts?
 --[Mazirian](http://mazirian.com)
 
 > Maybe, although it would need to take the critisism at
-> http://www.cs.tut.fi/~jkorpela/forms/accesskey.html into account.
+> <http://www.cs.tut.fi/~jkorpela/forms/accesskey.html> into account.
 
 >> Thank you for that link. Given that the edit link is the first thing you tab to
 >> in the current layout, I guess it isn't all that necessary. I have had a 
