--- a/doc/todo/refreshing_recentchanges_page.mdwn
+++ b/doc/todo/refreshing_recentchanges_page.mdwn
@@ -16,5 +16,5 @@ in WWW browser tab than subscribing to page. --Pawel
 
 > Sounds like a client-side issue, not an ikiwiki issue.  Grab the
 > [ReloadEvery](https://addons.mozilla.org/firefox/115/) extension for
-> <strike>Firefox</strike>Iceweasel, and use that to periodically refresh any page you
+> Firefox/Iceweasel, and use that to periodically refresh any page you
 > want. --[[JoshTriplett]]
