--- a/basewiki/openid.mdwn
+++ b/basewiki/openid.mdwn
@@ -1,34 +1,1 @@
-[[meta title="OpenID"]]
-
-[[template id=note text="""
-[[if test="enabled(openid)"
-     then="This wiki has OpenID **enabled**."
-     else="This wiki has OpenID **disabled**."]]
-"""]]
-
-[OpenID](http://openid.net) is a decentralized authentication mechanism
-that allows you to have one login that you can use on a growing number of
-websites.
-
-To sign up for an OpenID, visit one of the following identity providers:
-
-* [MyOpenID](https://www.myopenid.com/)
-* [GetOpenID](https://getopenid.com/)
-* [Videntity](http://videntity.org/)
-* [LiveJournal](http://www.livejournal.com/openid/)
-* or any of the many others out there..
-
-Your OpenID is the URL that you are given when you sign up.
-[[if test="enabled(openid)" then="""
-To sign in to this wiki using OpenID, just enter it in the OpenID field in the
-signin form. You do not need to give this wiki a password or go through any
-registration process when using OpenID.
-"""]]
-
----
-
-It's also possible to make a page in the wiki usable as an OpenID url,
-by delegating it to an openid server. Here's an example of how to do that:
-
-	\[[meta link="http://www.myopenid.com/server" rel="openid.server"]]
-	\[[meta link="http://yourid.myopenid.com/" rel="openid.delegate"]]
+../doc/openid.mdwn
