--- a/basewiki/preprocessordirective.mdwn
+++ b/basewiki/preprocessordirective.mdwn
@@ -1,33 +1,1 @@
-Preprocessor directives are similar to a [[WikiLink]] in form, except they
-contain spaces and parameters. The general form is:
-
-	\[[directive param="value" param="value"]]
-
-This gets expanded before the rest of the page is processed, and can be used
-to transform the page in various ways.
-
-The quotes around values can be omitted if the value is a simple word.
-Also, some directives may use parameters without values, for example:
-
-	\[[tag foo]]
-
-Note that if a preprocessor directive has no parameters, a space still must
-be put after its name, to avoid confusion with a [[WikiLink]]. For example:
-
-	\[[pagecount ]]
-
-A preprocessor directive does not need to all be on one line, it can be
-wrapped to multiple lines if you like:
-	
-	\[[directive foo="baldersnatch"
-	bar="supercalifragalisticexpealadocious" baz=11]]
-
-Also, multiple lines of *quoted* text can be used for a value.
-To allow quote marks inside the quoted text, delimit the block
-of text with triple-quotes:
-
-	\[[directive text="""
-	1. "foo"
-	2. "bar"
-	3. "baz"
-	"""]]
+../doc/preprocessordirective.mdwn
