--- a/basewiki/smileys.mdwn
+++ b/basewiki/smileys.mdwn
@@ -1,50 +1,1 @@
-This page is used to control what smileys are supported by the wiki.
-Just write the text of a smiley to display it.
-
-* \:)	[[smileys/smile.png]]
-* \:-)	[[smileys/smile.png]]
-* \:D	[[smileys/biggrin.png]]
-* \:-D	[[smileys/biggrin.png]]
-* \B)	[[smileys/smile2.png]]
-* \B-)	[[smileys/smile2.png]]
-* \:))	[[smileys/smile3.png]]
-* \:-))	[[smileys/smile3.png]]
-* \;)	[[smileys/smile4.png]]
-* \;-)	[[smileys/smile4.png]]
-* \:\	[[smileys/ohwell.png]]
-* \:/	[[smileys/ohwell.png]]
-* \:-/	[[smileys/ohwell.png]]
-* \>:>	[[smileys/devil.png]]
-* \X-(	[[smileys/angry.png]]
-* \<:(	[[smileys/frown.png]]
-* \:(	[[smileys/sad.png]]
-* \:-(	[[smileys/sad.png]]
-* \:-?	[[smileys/tongue.png]]
-* \:o	[[smileys/redface.png]]
-* \|)	[[smileys/tired.png]]
-* \|-)	[[smileys/tired.png]]
-* \{OK}	[[smileys/thumbs-up.png]]
-* \{X}	[[smileys/icon-error.png]]
-* \{i}	[[smileys/icon-info.png]]
-* \(./)	[[smileys/checkmark.png]]
-* \(!)	[[smileys/idea.png]]
-* \[!]	[[smileys/attention.png]]
-* \/!\	[[smileys/alert.png]]
-* \{*}	[[smileys/star_on.png]]
-* \{o}	[[smileys/star_off.png]]
-* \{1} [[smileys/prio1.png]]
-* \{2} [[smileys/prio2.png]]
-* \{3} [[smileys/prio3.png]]
-
-For example: {*} B) {*}
-
-----
-
-To change the supported smileys, just edit the lists on this page.
-Note that the format is important; each list item should start with the
-text that is turned into the smiley, escaped so that users can see what
-produces it, followed by a [[WikiLink]] to the image to display.
-
-/!\ Bear in mind that the link to the image needs to be written in a way that
-will work if it's copied to other pages on the wiki. So be sure to include the
-smileys directory in the path to the file.
+../doc/smileys.mdwn
