--- a/doc/bugs/merging_to_basewiki_causes_odd_inconsistencies.mdwn
+++ b/doc/bugs/merging_to_basewiki_causes_odd_inconsistencies.mdwn
@@ -1,3 +1,6 @@
 Merging pages to the basewiki causes some odd inconsistencies.  In particular,
 if I edit a page, you merge it to the basewiki, and I go to edit it again, the
 edit box displays the old text, without my edit. --[[JoshTriplett]]
+
+Funny, I was getting annoyed at this independently, and committed a fix
+before I saw this.. [[bugs/done]] --[[Joey]]
