--- a/doc/todo/smileys_do_not_work_in_PreprocessorDirective_arguments.mdwn
+++ b/doc/todo/smileys_do_not_work_in_PreprocessorDirective_arguments.mdwn
@@ -14,3 +14,5 @@ after [[PreprocessorDirective]]s.
 > Also, for an example of this issue, consider the sample conditional on [[plugins/conditional]].
 >
 > --[[JoshTriplett]]
+
+[[todo/done]] --[[Joey]]
