--- a/po/es.po
+++ b/po/es.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-02-11 22:01-0500\n"
+"POT-Creation-Date: 2007-02-13 18:43-0500\n"
 "PO-Revision-Date: 2007-02-12 10:31+0100\n"
 "Last-Translator: Víctor Moral <victor@taquiones.net>\n"
 "Language-Team: spanish <es@li.org>\n"
@@ -52,7 +52,9 @@ msgstr "Ha sido expulsado."
 
 #: ../IkiWiki/CGI.pm:660
 msgid "login failed, perhaps you need to turn on cookies?"
-msgstr "registro fallido, ¿ tal vez es necesario activar las cookies en el navegador ?"
+msgstr ""
+"registro fallido, ¿ tal vez es necesario activar las cookies en el "
+"navegador ?"
 
 #: ../IkiWiki/Plugin/aggregate.pm:61
 #, perl-format
@@ -115,7 +117,8 @@ msgstr "el programa fortune ha fallado"
 
 #: ../IkiWiki/Plugin/googlecalendar.pm:22
 msgid "googlecalendar failed to find url in html"
-msgstr "El complemento googlecalendar no ha encontrado un URL en el código HTML"
+msgstr ""
+"El complemento googlecalendar no ha encontrado un URL en el código HTML"
 
 #: ../IkiWiki/Plugin/inline.pm:36
 msgid "Must specify url to wiki with --url when using --rss or --atom"
@@ -295,7 +298,9 @@ msgstr "convirtiendo la página %s, la cual depende de %s"
 #: ../IkiWiki/Render.pm:402
 #, perl-format
 msgid "rendering %s, to update its backlinks"
-msgstr "convirtiendo la página %s para actualizar la lista de páginas que hacen referencia a ella."
+msgstr ""
+"convirtiendo la página %s para actualizar la lista de páginas que hacen "
+"referencia a ella."
 
 #: ../IkiWiki/Render.pm:414
 #, perl-format
@@ -346,7 +351,8 @@ msgstr "el programa %s no parece ser ejecutable"
 
 #: ../IkiWiki/Wrapper.pm:20
 msgid "cannot create a wrapper that uses a setup file"
-msgstr "no puedo crear un programa envoltorio que utiliza un archivo de configuración"
+msgstr ""
+"no puedo crear un programa envoltorio que utiliza un archivo de configuración"
 
 #: ../IkiWiki/Wrapper.pm:24
 msgid "wrapper filename not specified"
@@ -378,8 +384,8 @@ msgstr "uso: ikiwiki [opciones] origen destino"
 #: ../IkiWiki.pm:103
 msgid "Must specify url to wiki with --url when using --cgi"
 msgstr ""
-"Es obligatorio especificar un url al wiki con el parámetro --url si se utiliza "
-"el parámetro --cgi"
+"Es obligatorio especificar un url al wiki con el parámetro --url si se "
+"utiliza el parámetro --cgi"
 
 #: ../IkiWiki.pm:148 ../IkiWiki.pm:149
 msgid "Error"
@@ -395,4 +401,3 @@ msgid "%s preprocessing loop detected on %s at depth %i"
 msgstr ""
 "se ha detectado un bucle de preprocesado %s en la página %s en la vuelta "
 "número %i"
-
