--- a/doc/plugins/template.mdwn
+++ b/doc/plugins/template.mdwn
@@ -25,7 +25,7 @@ large chunks of marked up text to be embedded into a template:
 
 To create a template, make a page in the wiki named `template/foo`. Note
 that this is a different location than the directory used for the
-[[templates]] used to build the wiki itself, which is not inside the wiki.
+[[templates]] used to build the wiki itself, which is not part of the wiki.
 
 The template uses the syntax used by the [[cpan HTML::Template]] perl
 module, which allows for some fairly complex things to be done. Consult its
@@ -37,6 +37,10 @@ few things:
   `<TMPL_IF NAME="variable">text</TMPL_IF>`.
 * To use one block of text if a variable is set and a second if it's not,
   use `<TMPL_IF NAME="variable">text<TMPL_ELSE>other text</TMPL_IF>`
+
+The filled out template will be formatted the same as the rest of the page
+that contains it, so you can include WikiLinks and all other forms of wiki
+markup in the template.
 
 Here's a sample template:
 
