web commit by JoshTriplett: meta title

--- a/doc/freesoftware.mdwn
+++ b/doc/freesoftware.mdwn
@@ -1,3 +1,5 @@
+[[meta title="Free Software"]]
+
 ikiwiki is licensed under the terms of the GNU [[GPL]], version 2 or later.
 
 The parts of ikiwiki that become part of your own wiki (the basewiki pages
