web commit by JoshTriplett: meta title

--- a/doc/css_market.mdwn
+++ b/doc/css_market.mdwn
@@ -1,3 +1,5 @@
+[[meta title="CSS Market"]]
+
 User contributed stylesheet files for ikiwiki. Feel free to add your own
 stylesheets here. (Upload as wiki pages; wiki gnomes will convert them to css
 files..)
