web commit by JoshTriplett: Add instructions for Firefox and Iceweasel.

--- a/doc/css_market.mdwn
+++ b/doc/css_market.mdwn
@@ -18,4 +18,4 @@ files..)
 If your web browser allows selecting between multiple stylesheets, this
 page can be viewed using any of the stylesheets above. For example, if
 using Epiphany with the Select Stylesheet extention enabled, use View ->
-Style.
+Style.  In Firefox or Iceweasel, use View -> Page Style.
