move the release template to the softwaresite example

--- a/doc/examples/softwaresite/templates/release/discussion.mdwn
+++ b/doc/examples/softwaresite/templates/release/discussion.mdwn
@@ -10,3 +10,6 @@ I'd rather not use a template for my release announcements, because these announ
 > you have already done so, then could you post a link to them?
 >
 > --[[JoshTriplett]]
+
+>> No problem. My release script is here:
+>> <http://svn.kitenet.net/trunk/bin/wikiannounce> --[[Joey]]
