--- a/doc/news/version_1.42.mdwn
+++ b/doc/news/version_1.42.mdwn
@@ -1,4 +1,5 @@
-[[template id=release version="1.42" news="""
+News for ikiwiki 1.42:
+
 The `anonok` setting in config files has been removed. To enable anonymous
 edits on your wiki, you should now enable the [[anonok_plugin|plugins/anonok]]
 instead.
@@ -6,7 +7,9 @@ instead.
 [[Third-party_plugins|plugins/contrib]] that use `pagespec_match()` should be
 updated to pass the new third parameter `from` to that function. This is
 needed for the new relative glob matching to work.
-""" changelog="""
+
+ikiwiki 1.42 released with [[toggle text="these changes"]]
+[[toggleable text="""
    * Fix several more missing translations of Discussion.
    * Fix for missing `backlinks()` in [[pagestats_plugin|plugins/pagestats]].
    * Add `canedit` hook, allowing arbitrary controls over when a page can be
@@ -39,5 +42,4 @@ needed for the new relative glob matching to work.
      to exist in the wiki, and the web user would need to somehow use the web
      based editor to replace it with malicious content.
      (Sorry Josh, this means you can't edit style.css directly anymore,
-     although I do appreciate your fixes, actually..)
-"""]]
+     although I do appreciate your fixes, actually..)"""]]
