--- a/doc/examples/softwaresite/templates/release.mdwn
+++ b/doc/examples/softwaresite/templates/release.mdwn
@@ -3,5 +3,5 @@
 <TMPL_VAR news>
 
 </TMPL_IF>
-ikiwiki <TMPL_VAR version> released with [[toggle text="these changes" id="changelog"]]
+FooBar <TMPL_VAR version> released with [[toggle text="these changes" id="changelog"]]
 [[toggleable id="changelog" text="""<TMPL_VAR changelog>"""]]
