web commit by JoshTriplett: Link to mdwn2man.

--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -267,4 +267,4 @@ configuration options of their own.
 
 Joey Hess <joey@kitenet.net>
 
-Warning: this page is automatically made into ikiwiki's man page, edit with care
+Warning: this page is automatically made into ikiwiki's man page via [mdwn2man](http://ikiwiki.kitenet.net/cgi-bin/viewvc.cgi/trunk/mdwn2man?root=ikiwiki&view=markup).  Edit with care
