web commit by JoshTriplett: Does discussion end up in examples?

--- a/doc/examples/softwaresite/templates/release/discussion.mdwn
+++ b/doc/examples/softwaresite/templates/release/discussion.mdwn
@@ -29,3 +29,6 @@ I'd rather not use a template for my release announcements, because these announ
 >>> code easier to work with at the same time.
 >>>
 >>> --[[JoshTriplett]]
+
+>>> Also, will this discussion page end up in the softwaresite example?  If
+>>> so, perhaps it should go elsewhere. --[[JoshTriplett]]
