web commit by JoshTriplett: Fix typo.

--- a/doc/plugins/tag.mdwn
+++ b/doc/plugins/tag.mdwn
@@ -11,7 +11,7 @@ tagged with a given tag, for example. The tags will also show up on blog
 entries and at the bottom of the tagged pages, as well as in RSS and Atom
 feeds.
 
-This plugin has a configuration option. Set --tagbase=tag and links to tags
+This plugin has a configuration option. Set --tagbase=tags and links to tags
 will be located under the specified base page. If ikiwiki is configured
 this way, then the example above actually tags the page with the tags
 tags/tech, tags/life, and tags/linux. This is a useful way to avoid
