--- a/doc/plugins/tag.mdwn
+++ b/doc/plugins/tag.mdwn
@@ -18,5 +18,7 @@ tags/tech, tags/life, and tags/linux. This is a useful way to avoid
 having to write the full path to tags, if you want to keep them grouped
 together out of the way.
 
-If this plugin is enabled, you'll see a note below that this page is tagged
-with the "tags" tag.
+[[if test="enabled(tag)" then="""
+This wiki has the tag plugin enabled, so you'll see a note below that this
+page is tagged with the "tags" tag.
+"""]]
