--- a/doc/plugins/mdwn.mdwn
+++ b/doc/plugins/mdwn.mdwn
@@ -1,5 +1,5 @@
 [[template id=plugin name=mdwn core=1 author="[[Joey]]"]]
-[[tag type/format type/core]]
+[[tag type/format]]
 
 This plugin lets ikwiki convert files with names ending in ".mdwn" to html.
 It uses the [[markdown]] minimal markup language.
