--- a/doc/examples/softwaresite/templates/release/discussion.mdwn
+++ b/doc/examples/softwaresite/templates/release/discussion.mdwn
@@ -32,3 +32,9 @@ I'd rather not use a template for my release announcements, because these announ
 
 >>> Also, will this discussion page end up in the softwaresite example?  If
 >>> so, perhaps it should go elsewhere. --[[JoshTriplett]]
+
+>>>> I escape html because markdown does not escape fully formed html tags
+>>>> and I want to be able to mention such tags in my changelogs.
+>>>>
+>>>> This page should probably be moved somewhere else, or just deleted..
+>>>> --[[Joey]]
