web commit by JoshTriplett: Fix links.

--- a/doc/examples/blog/sidebar.mdwn
+++ b/doc/examples/blog/sidebar.mdwn
@@ -1,7 +1,7 @@
 Example sidebar
 
-[[Blog|./index]]
-[[Archive|./posts]]
+[[Blog|index]]
+[[Archive|posts]]
 
 Categories:
 [[map pages="./tags/* and !*/Discussion"]]
