web commit by JoshTriplett: Response; feel free to delete apart from link to wikiannounce script.

--- a/doc/examples/softwaresite/templates/release/discussion.mdwn
+++ b/doc/examples/softwaresite/templates/release/discussion.mdwn
@@ -38,3 +38,11 @@ I'd rather not use a template for my release announcements, because these announ
 >>>>
 >>>> This page should probably be moved somewhere else, or just deleted..
 >>>> --[[Joey]]
+
+>>>>> Ah, that didn't occur to me, and it makes perfect sense.
+>>>>>
+>>>>> Apart from the link to your `wikiannounce` script, feel free to just
+>>>>> delete this page.  Perhaps you could link to that page from elsewhere on
+>>>>> the ikiwiki ikiwiki?
+>>>>>
+>>>>> Thanks again. --[[JoshTriplett]]
