--- a/doc/examples/softwaresite/templates/release/discussion.mdwn
+++ b/doc/examples/softwaresite/templates/release/discussion.mdwn
@@ -42,7 +42,7 @@ I'd rather not use a template for my release announcements, because these announ
 >>>>> Ah, that didn't occur to me, and it makes perfect sense.
 >>>>>
 >>>>> Apart from the link to your `wikiannounce` script, feel free to just
->>>>> delete this page.  Perhaps you could link to that page from elsewhere on
->>>>> the ikiwiki ikiwiki?
+>>>>> delete this page.  Perhaps you could link to that script from elsewhere
+>>>>> on the ikiwiki ikiwiki?
 >>>>>
 >>>>> Thanks again. --[[JoshTriplett]]
