--- a/doc/examples.mdwn
+++ b/doc/examples.mdwn
@@ -8,4 +8,4 @@ page gives some examples of ways to use ikiwiki.
 Each example is contained in its own subdirectory; just copy the source
 files into your wiki to start using one of the examples.
 
-
+The [[tips]] page has some other ideas for ways to use ikiwiki.
