* Allow multiple tag settings to appear in a single page.

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,8 +15,9 @@ ikiwiki (1.43) UNRELEASED; urgency=low
     preprocessing it.
   * Fix smiley plugin to support smileys at the very beginning or end of
     the content.
+  * Allow multiple tag settings to appear in a single page.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 13 Feb 2007 18:40:36 -0500
+ -- Joey Hess <joeyh@debian.org>  Tue, 13 Feb 2007 22:40:56 -0500
 
 ikiwiki (1.42) unstable; urgency=low
 
