--- a/doc/plugins/template.mdwn
+++ b/doc/plugins/template.mdwn
@@ -38,10 +38,6 @@ few things:
 * To use one block of text if a variable is set and a second if it's not,
   use `<TMPL_IF NAME="variable">text<TMPL_ELSE>other text</TMPL_IF>`
 
-The filled out template will be formatted the same as the rest of the page
-that contains it, so you can include WikiLinks and all other forms of wiki
-markup in the template.
-
 Here's a sample template:
 
 	<span class="infobox">
@@ -57,3 +53,8 @@ Here's a sample template:
 	<TMPL_VAR notes>
 	</TMPL_IF>
 	</span>
+
+The filled out template will be formatted the same as the rest of the page
+that contains it, so you can include WikiLinks and all other forms of wiki
+markup in the template. Note though that such WikiLinks will not show up as
+backlinks to the page that uses the template.
