--- a/doc/tips.mdwn
+++ b/doc/tips.mdwn
@@ -14,7 +14,7 @@ somewhat specific to dealing with Debian packages, and uses a special
 ## blog script
 
 I should mention that I also have a
-[blog](http://svn.kitenet.net/trunk/bin/wikiannounce) program that I use to
+[blog](http://svn.kitenet.net/trunk/bin/blog) program that I use to
 write blog posts in a text editor. The first line I enter is used as the
 title, and it automatically comes up with a unique page name based on the
 title and handles all the details of posting to my blog. --[[Joey]]
